--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "build": "next build",
     "start": "next start",
     "deploy": "next build && touch out/.nojekyll && git add out/ && git commit -m \"Deploy to gh-pages\" && git subtree push --prefix out origin gh-pages"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
