--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "next": "^14.2.7",
+    "nextjs-google-analytics": "^2.3.7",
     "nextra": "^2.13.4",
     "nextra-theme-blog": "^2.13.4",
     "nextra-theme-docs": "^2.13.4",
@@ -17,4 +18,3 @@
     "gh-pages": "^6.1.1"
   }
 }
-
