--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@giscus/react": "^3.0.0",
     "next": "^14.2.7",
     "nextjs-google-analytics": "^2.3.7",
     "nextra": "^2.13.4",
